make-a-wish-salesforce/src/objects/npsp__Data_Import_Field_Mapping__mdt.object
<CustomObject>
    <description>Used for Data Import Advanced Mapping definitions. These are mappings of source fields on the NPSP Data Import object to target fields on standard or custom objects.</description>
    <fields>
        <fullName>npsp__Data_Import_Field_Mapping_Set__c</fullName>
        <description>The Data Import Field Mapping Set containing this field mapping.</description>
        <inlineHelpText>The Data Import Field Mapping Set containing this field mapping.</inlineHelpText>
        <label>Data Import Field Mapping Set</label>
        <referenceTo>npsp__Data_Import_Field_Mapping_Set__mdt</referenceTo>
        <relationshipLabel>Data Import Field Mappings</relationshipLabel>
        <relationshipName>Data_Import_Field_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates this record was deleted from the Data Import Advanced Mapping user interface and will be ignored during NPSP Data Import processing.</description>
        <inlineHelpText>When checked, indicates this record was deleted from the Data Import Advanced Mapping user interface and will be ignored during NPSP Data Import processing.</inlineHelpText>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Required__c</fullName>
        <description>Indicates if the field on the NPSP Data Import object must contain a value. When it&apos;s required, Dry Run will fail if that field doesn&apos;t contain a value.</description>
        <inlineHelpText>Indicates if the field on the NPSP Data Import object must contain a value. When it&apos;s required, Dry Run will fail if that field doesn&apos;t contain a value.</inlineHelpText>
        <label>Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Source_Field_API_Name__c</fullName>
        <description>The API name of the field on the NPSP Data Import object.</description>
        <inlineHelpText>The API name of the field on the NPSP Data Import object.</inlineHelpText>
        <label>Source Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Target_Field_API_Name__c</fullName>
        <description>The API name of the field on the target object.</description>
        <inlineHelpText>The API name of the field on the target object.</inlineHelpText>
        <label>Target Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Target_Object_Mapping__c</fullName>
        <description>The target Object Group for this Field Mapping.</description>
        <inlineHelpText>The target Data Import Object Group for this field mapping.</inlineHelpText>
        <label>Target Object Mapping</label>
        <referenceTo>npsp__Data_Import_Object_Mapping__mdt</referenceTo>
        <relationshipLabel>Data Import Field Mappings</relationshipLabel>
        <relationshipName>Data_Import_Field_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Data Import Field Mapping</label>
    <pluralLabel>Data Import Field Mappings</pluralLabel>
</CustomObject>